6-picture-carousel-static-website-deployment with cloud-formation/newcfn.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Simple static website using one EC2 and sg

Parameters:
  pImageId:
    Description: Latest Amazon Linux Ami ID
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64
  
  pKeyPair:
    Description: Key Pair Name
    Type: AWS::EC2::KeyPair::KeyName

Resources: 
  rSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable ssh and HTTP for web server"
      GroupName: enable-http-and-ssh
      SecurityGroupIngress:
      - IpProtocol: tcp
        ToPort: 22
        FromPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: 0.0.0.0/0
  rWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref pImageId
      InstanceType: t2.micro
      KeyName: !Ref pKeyPair
      SecurityGroupIds:
      - !GetAtt rSecurityGroup.GroupId
      Tags: 
      - Key: Name
        Value: ms-web-sever
      UserData:
         Fn::Base64:
          |
          #!/bin/bash -x

          # update the system and install apache

          yum update -y
          yum install httpd -y

          #change to the current directory and download web content

          cd /var/www/html
          FOLDER="https://raw.githubusercontent.com/mseyitoglu/deployables/main/picture-carousel-static-website-deployment%20with%20cloud-formation/static-web/"
          wget ${FOLDER}/index.html
          wget ${FOLDER}/cat0.jpg
          wget ${FOLDER}/cat1.jpg
          wget ${FOLDER}/cat2.jpg

          systemctl start httpd
          systemctl enable httpd        

            
# Outputs:
